<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/puzzleIdTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/FilterPuzzleID_label"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sizeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="16dp"
        android:text="@string/filterSize_label"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@+id/puzzleIdTextView"
        app:layout_constraintTop_toBottomOf="@+id/puzzleIdTextView" />

    <CheckBox
        android:id="@+id/filterCompleteCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="24dp"
        android:checked="true"
        android:text="@string/filterCompletedCheckBox"
        app:layout_constraintLeft_toLeftOf="@+id/sizeTextView"
        app:layout_constraintTop_toBottomOf="@+id/sizeTextView" />

    <CheckBox
        android:id="@+id/filterUncompleteCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="0dp"
        android:checked="true"
        android:text="@string/filterUncompletedCheckBox"
        app:layout_constraintLeft_toRightOf="@+id/filterCompleteCheckBox"
        app:layout_constraintTop_toTopOf="@+id/filterCompleteCheckBox" />

    <Button
        android:id="@+id/applyFiltersButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="onApplyFilterButtonClick"
        android:text="@string/applyFilterButton"
        app:layout_constraintTop_toBottomOf="@+id/filterCompleteCheckBox"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        app:layout_constraintVertical_bias="0.501"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/puzzleIdTextView"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/filterPuzzleIdEditText" />

    <EditText
        android:id="@+id/filterPuzzleIdEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="0dp"
        android:ems="10"
        android:hint="@string/filterEditTextHint"
        android:inputType="numberSigned"
        android:maxLines="1"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/puzzleIdTextView"
        app:layout_constraintLeft_toRightOf="@+id/puzzleIdTextView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/puzzleIdTextView" />

    <EditText
        android:id="@+id/filterSizeEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:ems="10"
        android:hint="@string/filterEditTextHint"
        android:inputType="numberSigned"
        android:maxLines="1"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="@+id/filterPuzzleIdEditText"
        app:layout_constraintRight_toRightOf="@+id/filterPuzzleIdEditText"
        app:layout_constraintTop_toTopOf="@+id/sizeTextView" />

</android.support.constraint.ConstraintLayout>